Search publication + openapi
